--- a/portfolio.html
+++ b/portfolio.html
@@ -90,13 +90,12 @@
                     alt="Banking App Interface Concept"
                     width="360"
                   />
-                  <div class="card-overlay">
-                    <p class="card-overlay-text">
-                      14 Stylish and User-Friendly App Design Concepts · Task
-                      Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
-                      App · Cloud Storage App
-                    </p>
-                  </div>
+
+                  <p class="card-overlay-text card-overlay">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
                 </div>
                 <div class="project-name">
                   <h2 class="portfolio-card-header">
@@ -114,13 +113,12 @@
                     alt="Cashless Payment"
                     width="360"
                   />
-                  <div class="card-overlay">
-                    <p class="card-overlay-text">
-                      14 Stylish and User-Friendly App Design Concepts · Task
-                      Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
-                      App · Cloud Storage App
-                    </p>
-                  </div>
+
+                  <p class="card-overlay-text card-overlay">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
                 </div>
                 <div class="project-name">
                   <h2 class="portfolio-card-header">Cashless Payment</h2>
@@ -136,13 +134,12 @@
                     alt="Meditation App"
                     width="360"
                   />
-                  <div class="card-overlay">
-                    <p class="card-overlay-text">
-                      14 Stylish and User-Friendly App Design Concepts · Task
-                      Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
-                      App · Cloud Storage App
-                    </p>
-                  </div>
+
+                  <p class="card-overlay-text card-overlay">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
                 </div>
                 <div class="project-name">
                   <h2 class="portfolio-card-header">Meditation App</h2>
@@ -158,13 +155,12 @@
                     alt="Taxi Service"
                     width="360"
                   />
-                  <div class="card-overlay">
-                    <p class="card-overlay-text">
-                      14 Stylish and User-Friendly App Design Concepts · Task
-                      Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
-                      App · Cloud Storage App
-                    </p>
-                  </div>
+
+                  <p class="card-overlay-text card-overlay">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
                 </div>
                 <div class="project-name">
                   <h2 class="portfolio-card-header">Taxi Service</h2>
@@ -180,13 +176,12 @@
                     alt="Screen Illustrations"
                     width="360"
                   />
-                  <div class="card-overlay">
-                    <p class="card-overlay-text">
-                      14 Stylish and User-Friendly App Design Concepts · Task
-                      Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
-                      App · Cloud Storage App
-                    </p>
-                  </div>
+
+                  <p class="card-overlay-text card-overlay">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
                 </div>
                 <div class="project-name">
                   <h2 class="portfolio-card-header">Screen Illustrations</h2>
@@ -202,13 +197,12 @@
                     alt="Online Courses"
                     width="360"
                   />
-                  <div class="card-overlay">
-                    <p class="card-overlay-text">
-                      14 Stylish and User-Friendly App Design Concepts · Task
-                      Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
-                      App · Cloud Storage App
-                    </p>
-                  </div>
+
+                  <p class="card-overlay-text card-overlay">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
                 </div>
                 <div class="project-name">
                   <h2 class="portfolio-card-header">Online Courses</h2>
@@ -224,13 +218,12 @@
                     alt="Instagram Stories Concept"
                     width="360"
                   />
-                  <div class="card-overlay">
-                    <p class="card-overlay-text">
-                      14 Stylish and User-Friendly App Design Concepts · Task
-                      Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
-                      App · Cloud Storage App
-                    </p>
-                  </div>
+
+                  <p class="card-overlay-text card-overlay">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
                 </div>
                 <div class="project-name">
                   <h2 class="portfolio-card-header">
@@ -248,13 +241,12 @@
                     alt="Organic Food"
                     width="360"
                   />
-                  <div class="card-overlay">
-                    <p class="card-overlay-text">
-                      14 Stylish and User-Friendly App Design Concepts · Task
-                      Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
-                      App · Cloud Storage App
-                    </p>
-                  </div>
+
+                  <p class="card-overlay-text card-overlay">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
                 </div>
                 <div class="project-name">
                   <h2 class="portfolio-card-header">Organic Food</h2>
@@ -270,13 +262,12 @@
                     alt="Fresh Coffee"
                     width="360"
                   />
-                  <div class="card-overlay">
-                    <p class="card-overlay-text">
-                      14 Stylish and User-Friendly App Design Concepts · Task
-                      Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
-                      App · Cloud Storage App
-                    </p>
-                  </div>
+
+                  <p class="card-overlay-text card-overlay">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
                 </div>
                 <div class="project-name">
                   <h2 class="portfolio-card-header">Fresh Coffee</h2>
