--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
                 <ul class="social-media list">
                   <li class="social-icons">
                     <a href="" class="link">
-                      <svg class="icon" width="16" height="16">
+                      <svg class="icon-our" width="16" height="16">
                         <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
@@ -173,21 +173,21 @@
 
                   <li class="social-icons">
                     <a href="" class="link">
-                      <svg class="icon" width="16" height="16">
+                      <svg class="icon-our" width="16" height="16">
                         <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-icons">
                     <a href="" class="link">
-                      <svg class="icon" width="16" height="16">
+                      <svg class="icon-our" width="16" height="16">
                         <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-icons">
                     <a href="" class="link">
-                      <svg class="icon" width="16" height="16">
+                      <svg class="icon-our" width="16" height="16">
                         <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
                     </a>
@@ -204,7 +204,7 @@
                 <ul class="social-media list">
                   <li>
                     <a href="" class="link">
-                      <svg class="icon" width="16" height="16">
+                      <svg class="icon-our" width="16" height="16">
                         <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
@@ -212,21 +212,21 @@
 
                   <li>
                     <a href="" class="link">
-                      <svg class="icon" width="16" height="16">
+                      <svg class="icon-our" width="16" height="16">
                         <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li>
                     <a href="" class="link">
-                      <svg class="icon" width="16" height="16">
+                      <svg class="icon-our" width="16" height="16">
                         <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li>
                     <a href="" class="link">
-                      <svg class="icon" width="16" height="16">
+                      <svg class="icon-our" width="16" height="16">
                         <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
                     </a>
@@ -243,7 +243,7 @@
                 <ul class="social-media list">
                   <li>
                     <a href="" class="link">
-                      <svg class="icon" width="16" height="16">
+                      <svg class="icon-our" width="16" height="16">
                         <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
@@ -251,21 +251,21 @@
 
                   <li>
                     <a href="" class="link">
-                      <svg class="icon" width="16" height="16">
+                      <svg class="icon-our" width="16" height="16">
                         <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li>
                     <a href="" class="link">
-                      <svg class="icon" width="16" height="16">
+                      <svg class="icon-our" width="16" height="16">
                         <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li>
                     <a href="" class="link">
-                      <svg class="icon" width="16" height="16">
+                      <svg class="icon-our" width="16" height="16">
                         <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
                     </a>
@@ -281,7 +281,7 @@
                 <ul class="social-media list">
                   <li>
                     <a href="" class="link">
-                      <svg class="icon" width="16" height="16">
+                      <svg class="icon-our" width="16" height="16">
                         <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
@@ -289,21 +289,21 @@
 
                   <li>
                     <a href="" class="link">
-                      <svg class="icon" width="16" height="16">
+                      <svg class="icon-our" width="16" height="16">
                         <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li>
                     <a href="" class="link">
-                      <svg class="icon" width="16" height="16">
+                      <svg class="icon-our" width="16" height="16">
                         <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li>
                     <a href="" class="link">
-                      <svg class="icon" width="16" height="16">
+                      <svg class="icon-our" width="16" height="16">
                         <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
                     </a>
@@ -387,28 +387,28 @@
           <ul class="footer-social-media list">
             <li class="footer-icons">
               <a href="" class="link">
-                <svg class="icon" width="24" height="24">
+                <svg class="icon-our" width="24" height="24">
                   <use href="./images/icons.svg#icon-instagram"></use>
                 </svg>
               </a>
             </li>
             <li class="footer-icons">
               <a href="" class="link">
-                <svg class="icon" width="24" height="24">
+                <svg class="icon-our" width="24" height="24">
                   <use href="./images/icons.svg#icon-twitter"></use>
                 </svg>
               </a>
             </li>
             <li class="footer-icons">
               <a href="" class="link">
-                <svg class="icon" width="24" height="24">
+                <svg class="icon-our" width="24" height="24">
                   <use href="./images/icons.svg#icon-facebook"></use>
                 </svg>
               </a>
             </li>
             <li class="footer-icons">
               <a href="" class="link">
-                <svg class="icon" width="24" height="24">
+                <svg class="icon-our" width="24" height="24">
                   <use href="./images/icons.svg#icon-linkedin"></use>
                 </svg>
               </a>
