--- a/portfolio.html
+++ b/portfolio.html
@@ -299,28 +299,28 @@
           <ul class="footer-social-media list">
             <li class="footer-icons">
               <a href="" class="link">
-                <svg class="icon" width="24" height="24">
+                <svg class="icon-our" width="24" height="24">
                   <use href="./images/icons.svg#icon-instagram"></use>
                 </svg>
               </a>
             </li>
             <li class="footer-icons">
               <a href="" class="link">
-                <svg class="icon" width="24" height="24">
+                <svg class="icon-our" width="24" height="24">
                   <use href="./images/icons.svg#icon-twitter"></use>
                 </svg>
               </a>
             </li>
             <li class="footer-icons">
               <a href="" class="link">
-                <svg class="icon" width="24" height="24">
+                <svg class="icon-our" width="24" height="24">
                   <use href="./images/icons.svg#icon-facebook"></use>
                 </svg>
               </a>
             </li>
             <li class="footer-icons">
               <a href="" class="link">
-                <svg class="icon" width="24" height="24">
+                <svg class="icon-our" width="24" height="24">
                   <use href="./images/icons.svg#icon-linkedin"></use>
                 </svg>
               </a>
